--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
+    "axios": "^1.6.0",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.5.3",
     "react": "^18.2.0",
